@@ -2,6 +2,10 @@ GNU diffutils NEWS                                    -*- outline -*-
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+** Bug fixes
+
+  diff --color no longer colorizes when TERM=dumb
+
 
 * Noteworthy changes in release 3.4 (2016-08-08) [stable]
 
